Added a feature to train an ensemble of model set-ups

--- a/NLP_reviews-Copy1.ipynb
+++ b/NLP_reviews-Copy1.ipynb
@@ -200,11 +200,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2fac84a5-3945-42af-9a41-c4df559e4590",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>helpful</th>\n",
+       "      <th>overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Loves the song, so he really couldn't wait to ...</td>\n",
+       "      <td>Really cute</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Oh, how my little grandson loves this app. He'...</td>\n",
+       "      <td>2-year-old loves it</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I found this at a perfect time since my daught...</td>\n",
+       "      <td>Fun game</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>My 1 year old goes back to this game over and ...</td>\n",
+       "      <td>We love our Monkeys!</td>\n",
+       "      <td>[3, 4]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>There are three different versions of the song...</td>\n",
+       "      <td>This is my granddaughters favorite app on my K...</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752932</th>\n",
+       "      <td>I love it!!!!!!!!!!  really keeps your attenti...</td>\n",
+       "      <td>Five Stars</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752933</th>\n",
+       "      <td>Okay but there are so many free ones that are ...</td>\n",
+       "      <td>... are so many free ones that are so much bet...</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752934</th>\n",
+       "      <td>Another great jewels game that just keeps you ...</td>\n",
+       "      <td>Enjoyable</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752935</th>\n",
+       "      <td>I find this the best jewels star ever. There s...</td>\n",
+       "      <td>entertaining</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752936</th>\n",
+       "      <td>This game was fun to play but was not as good ...</td>\n",
+       "      <td>This game was fun to play but was not as good ...</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>752937 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               reviewText  \\\n",
+       "0       Loves the song, so he really couldn't wait to ...   \n",
+       "1       Oh, how my little grandson loves this app. He'...   \n",
+       "2       I found this at a perfect time since my daught...   \n",
+       "3       My 1 year old goes back to this game over and ...   \n",
+       "4       There are three different versions of the song...   \n",
+       "...                                                   ...   \n",
+       "752932  I love it!!!!!!!!!!  really keeps your attenti...   \n",
+       "752933  Okay but there are so many free ones that are ...   \n",
+       "752934  Another great jewels game that just keeps you ...   \n",
+       "752935  I find this the best jewels star ever. There s...   \n",
+       "752936  This game was fun to play but was not as good ...   \n",
+       "\n",
+       "                                                  summary helpful  overall  \n",
+       "0                                             Really cute  [1, 1]      3.0  \n",
+       "1                                     2-year-old loves it  [0, 0]      5.0  \n",
+       "2                                                Fun game  [0, 0]      5.0  \n",
+       "3                                    We love our Monkeys!  [3, 4]      5.0  \n",
+       "4       This is my granddaughters favorite app on my K...  [1, 1]      5.0  \n",
+       "...                                                   ...     ...      ...  \n",
+       "752932                                         Five Stars  [0, 0]      5.0  \n",
+       "752933  ... are so many free ones that are so much bet...  [0, 0]      3.0  \n",
+       "752934                                          Enjoyable  [0, 0]      4.0  \n",
+       "752935                                       entertaining  [0, 0]      5.0  \n",
+       "752936  This game was fun to play but was not as good ...  [0, 0]      4.0  \n",
+       "\n",
+       "[752937 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amzr_clean[['reviewText','summary','helpful','overall']]"
+   ]
   },
   {
    "cell_type": "markdown",
