removed suprious files and additional code clean-up

--- a/NLP_reviews_summary.ipynb
+++ b/NLP_reviews_summary.ipynb
@@ -24,11 +24,11 @@
    "id": "59a1551c-0bef-4942-ab8c-8810c5ea1e00",
    "metadata": {},
    "source": [
-    "__This Notebook__: you will find a summary of Proof-of-Concept solution I implemented and a discussion of its shortcomings and potential further developments. \n",
+    "__This Notebook__: you will find a summary of a Proof-of-Concept solution I implemented and a discussion of its shortcomings and potential further developments. \n",
     "\n",
-    "__Code__: the code used to generate the results can be found on github: xxx\n",
+    "__Code__: the code used to generate the results can be found on GitHub (https://github.com/yangsi7/NLP_reviews)\n",
     "\n",
-    "__PowerPoint presentation__: I created a short presentation. I intend to use as a support for the case-study interview. "
+    "__PowerPoint presentation__: I also created a short presentation. I intend to use it as a support for the case-study interview. "
    ]
   },
   {
@@ -50,6 +50,17 @@
     "\n",
     "II. __One-day solution and implementation__\n",
     "\n",
+    "    - Preprocessing steps\n",
+    "    - Data representation\n",
+    "    - Dealing with overfitting\n",
+    "    \n",
+    "III. __Improving the solution__\n",
+    "\n",
+    "    - Hyper-parameter optimization\n",
+    "    - Using I. __The problem__\n",
+    "\n",
+    "II. __One-day solution and implementation__\n",
+    "\n",
     "    - Proprocessing steps\n",
     "    - Data representation\n",
     "    - Dealing with overfitting\n",
@@ -59,7 +70,11 @@
     "    - Hyper-parameter optimization\n",
     "    - Using helpfullness to preprocess the data\n",
     "    - Multi-step approach\n",
-    "    - Ensemble modelling and bagging\n",
+    "    - Ensemble modeling and bagging\n",
+    "    \n",
+    "VI. __Potential applications for financial service firms__ to preprocess the data\n",
+    "    - Multi-step approach\n",
+    "    - Ensemble modeling and bagging\n",
     "    \n",
     "VI. __Potential applications for financial service firms__"
    ]
@@ -86,11 +101,11 @@
    "metadata": {},
    "source": [
     "Implementing a solution to this problem involves:\n",
-    "1. downloading the Amazon reviews data\n",
-    "2. repackagin JSON into a workable format\n",
-    "3. preparing and preprocessing the review data (features) and the overall ratings (labels)\n",
-    "4.training a model on the prepared features to predict the labels (ratings)\n",
-    "5. testing the model performance on an \"unseen\" subset of data"
+    "1. Downloading the Amazon reviews data\n",
+    "2. Repackaging JSON into a workable format\n",
+    "3. Preparing and preprocessing the review data (features) and the overall ratings (labels)\n",
+    "4. Training a model on the prepared features to predict the labels (ratings)\n",
+    "5. Testing the model performance on an \"unseen\" subset of data"
    ]
   },
   {
@@ -114,15 +129,15 @@
    "id": "fb4b0133-b65a-4686-ac3e-0303cd67ee48",
    "metadata": {},
    "source": [
-    "Due to time and computing ressource limitation, we simplify the problem slightly:\n",
-    "1. we only predict three ratings classes: \n",
-    "    - negative [0/5, 1/5] \n",
-    "    - neutral  [2/5, 3/5] \n",
-    "    - positive [4/5, 5/5]\n",
-    "2. we limit ourselves to using the full text reviews\n",
+    "Due to time and computing resource limitations, we simplify the problem slightly:\n",
+    "1. we only predict three rating classes: \n",
+    "    - Negative [1/5] \n",
+    "    - Slightly negative to neutral  [2/5, 3/5] \n",
+    "    - Positive [4/5, 5/5]\n",
+    "2. we limit ourselves to using the full-text reviews\n",
     "3. we implement only simple methods to prevent overfitting (more advanced method discussed below)\n",
     "4. we do not attempt optimization of hyperparameters\n",
-    "4. we do not implement advanced performance assesement such as K-fold cross validation. Rather we test our model on an third set of data (test set)."
+    "4. we do not implement advanced performance assessments such as K-fold cross-validation. Instead, we test our model on a third set of independent data (test set)."
    ]
   },
   {
@@ -138,11 +153,11 @@
    "id": "0fe191bb-3ddf-4c18-9917-4bb5927f54ab",
    "metadata": {},
    "source": [
-    "1. data is read and repackaged into pandas dataframe\n",
-    "2. first step of data clean-up\n",
-    "    - remove dupplicate entries\n",
+    "1. The Data is read and repackaged into pandas DataFrame\n",
+    "2. First step of data clean-up\n",
+    "    - remove duplicate entries\n",
     "    - remove rows with no reviews or overall rating\n",
-    "3. extract helfulness and create a \"helpfulness score\"\n",
+    "3. Extract helpfulness and create a \"helpfulness score.\"\n",
     "4. Preprocess text reviews:\n",
     "    - remove contractions\n",
     "    - make lower-case\n",
@@ -164,7 +179,7 @@
    "id": "81bd7c60-7ce2-4a5f-a277-abe2faeec6c6",
    "metadata": {},
    "source": [
-    "BERT is a pretrained language model for NLP created by Google AI language. The key innovation is the application of a bidirectional encoder, i.e., the words are interprated in context (left and right)."
+    "BERT is a pre-trained language model for NLP created by Google AI language. The key innovation is applying a bidirectional encoder, i.e., the words are interpreted in context (left and right)."
    ]
   },
   {
@@ -225,13 +240,13 @@
    "id": "9a03f6f0-009c-43d0-ab75-825bab8eacf1",
    "metadata": {},
    "source": [
-    "- we reserve data for testing by sampling 10000 reviews without replacement\n",
-    "- we sample an addional 10000 review for training and split it into:\n",
+    "- We reserve data for testing by sampling 10000 reviews without replacement\n",
+    "- We sample an addional 10000 review for training and split it into:\n",
     "    - a training set (80%)\n",
     "    - a validation set (20%) \n",
-    "- we extract features from preprocessed text using BERT tokenizor\n",
-    "- train the model to predict three rating classes:\n",
-    "    - 'negative' [0/5, 1/5] \n",
+    "- We extract features from preprocessed text using BERT tokenizor\n",
+    "- We train the model to predict three rating classes:\n",
+    "    - 'negative' [1/5] \n",
     "    - 'neutral'  [2/5, 3/5] \n",
     "    - 'positive' [4/5, 5/5]"
    ]
@@ -257,7 +272,7 @@
     "    - learning rate = 5e-5\n",
     "    - shuffle = 100\n",
     "- We use a batch size = 4. \n",
-    "- We run for 6 epochs \n"
+    "- We run for 5 epochs \n"
    ]
   },
   {
@@ -273,14 +288,14 @@
    "id": "2166d9e6-0aca-4255-8301-419a1d3cca64",
    "metadata": {},
    "source": [
-    "In order to prevent the model from overfitting, we use a simple validation-stop: the training is stopped if the validation loss has not improved over 3 epochs.\n",
+    "To prevent the model from overfitting, we use a dropout layer for regularization (30% probability) and a validation-stop: the training stops if the validation loss has not improved over two epochs.\n",
     "\n",
-    "There are a number of better ways to prevent overfitting:\n",
-    "- regularization\n",
+    "There are several other ways to prevent overfitting:\n",
+    "- L1 and L2 regularization\n",
     "- train an ensemble of models with varying parameters and data samples\n",
-    "- adding a drop-out layer\n",
+    "- tuning the parameters of the dropout layer\n",
     "    \n",
-    "My personal favorite is to use drop-out which is ususally a low-effort yet powerfull way to prevent overfitting. Ensemble modelling is interesting in the sense that the spread of predictions can give us an indication on uncertainty."
+    "My favorite is to use dropout, which is usually a low-effort yet powerful way to prevent overfitting. Ensemble modeling is interesting because the spread of predictions can indicate uncertainty but requires a lot of computing resources."
    ]
   },
   {
@@ -288,7 +303,7 @@
    "id": "980326dd-e320-48e6-971b-5f816ddafca4",
    "metadata": {},
    "source": [
-    "#####  __Testing__"
+    "#####  __Testing and evaluation__"
    ]
   },
   {
@@ -328,27 +343,25 @@
    "id": "cf4530ec-d5c3-4f90-ad2c-2d88d130c245",
    "metadata": {},
    "source": [
-    "There are many potential avenues to improve our preduction. Below are a few ideas:\n",
-    "\n",
-    "1. Leveraging review helpfullness in a two step process:\n",
-    "    - train model(1) to predict unhelfulness\n",
-    "    - train model(2) to predict ratings by first discarding unhelfull reviews\n",
-    "    - predict helpfullness \n",
-    "    - if unhelpfull discard, else predict rating\n",
-    "2. Increase computing ressources:\n",
+    "1. Leveraging review helpfulness in a two-step process:\n",
+    "    - train model(1) to predict unhelpfulness\n",
+    "    - train model(2) to predict ratings by first discarding unhelpful reviews\n",
+    "    - predict helpfulness \n",
+    "    - if unhelpful discard, else predict a rating\n",
+    "2. Increase computing resources:\n",
     "    - Optimize hyperparameters\n",
     "        - batch size\n",
     "        - learning rate\n",
-    "    - Train on larger set of data\n",
+    "    - Train on the more extensive set of data\n",
     "3. Regularization\n",
     "    - Train with a dropout layer to prevent overfitting\n",
     "    - tune dropout parameter\n",
     "4. Multi-model prediction:\n",
-    "    - Ensemble modeling - run an ensemble of model trained with varying hyperparameters, data sample, preprocessing steps. Use most likely label as the prediction.\n",
+    "    - Ensemble modeling - run an ensemble of the model trained with varying hyperparameters, data sample, preprocessing steps. Use most likely label as the prediction.\n",
     "    - Stacking: use a meta-model to predict from an ensemble of sub-model predictions (varying hyperparameters, data sample, preprocessing)\n",
-    "    - Use K-means clustering in a two-step two step process:\n",
+    "    - Use K-means clustering in a two-step process:\n",
     "        - (1) cluster users\n",
-    "        - (2) train a model for each cluster seperatly or use as additional features in the chain"
+    "        - (2) train a model for each cluster separately or use it as additional features in the chain"
    ]
   },
   {
@@ -368,20 +381,12 @@
     "- Detect compliance breach\n",
     "- Early controversy detection in the news\n",
     "- Use NLP for entity detection and scrapping of corporate data:\n",
-    "    - supply chain assesment\n",
+    "    - supply chain assessment\n",
     "    - subsidiary consolidated financial data\n",
-    "    - reported geosegments of revenue and asset\n",
+    "    - reported geo-segments of revenue and asset\n",
     "    - asset-level data\n",
-    "- Use sentiment analysis of social media and goodle searches to detect Megatrends"
+    "- Use sentiment analysis of social media and google searches to detect Megatrends"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b416f9b3-7453-47d2-adf8-e7ba55111276",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
