Last clean-up before submission. Converted Notebook to HTML.

--- a/NLP_reviews_summary.ipynb
+++ b/NLP_reviews_summary.ipynb
@@ -343,25 +343,25 @@
    "id": "cf4530ec-d5c3-4f90-ad2c-2d88d130c245",
    "metadata": {},
    "source": [
-    "1. Leveraging review helpfulness in a two-step process:\n",
-    "    - train model(1) to predict unhelpfulness\n",
-    "    - train model(2) to predict ratings by first discarding unhelpful reviews\n",
-    "    - predict helpfulness \n",
-    "    - if unhelpful discard, else predict a rating\n",
+    "1. Leveraging review helpfulness as well as both long and short reviews \n",
+    "    - Train a model to predict unhelpfulness and in order to discard unhelpful reviews.\n",
+    "    - Use helpfulness, short and long reviews prediction as inputs to a meta-classifier model.\n",
     "2. Increase computing resources:\n",
-    "    - Optimize hyperparameters\n",
+    "    - Optimization of model hyperparameters\n",
     "        - batch size\n",
     "        - learning rate\n",
-    "    - Train on the more extensive set of data\n",
-    "3. Regularization\n",
-    "    - Train with a dropout layer to prevent overfitting\n",
-    "    - tune dropout parameter\n",
+    "    - Train on larger set of data and with increased maximum length\n",
+    "    - Train for more epochs\n",
+    "\n",
+    "3. Explore and tune several regularization methods\n",
+    "    - Tune dropout layer parameters\n",
+    "    - Test and tune L1 and L2 regularization\n",
     "4. Multi-model prediction:\n",
-    "    - Ensemble modeling - run an ensemble of the model trained with varying hyperparameters, data sample, preprocessing steps. Use most likely label as the prediction.\n",
-    "    - Stacking: use a meta-model to predict from an ensemble of sub-model predictions (varying hyperparameters, data sample, preprocessing)\n",
-    "    - Use K-means clustering in a two-step process:\n",
-    "        - (1) cluster users\n",
-    "        - (2) train a model for each cluster separately or use it as additional features in the chain"
+    "    - Train an ensemble of models with varying hyperparameters, samples, pre-processing. \n",
+    "    - Stack: use a meta-model to predict from an ensemble of sub-model predictions (varying hyperparameters, data sample, pre-processing)most likely label as the prediction.\n",
+    "    - Use clustering algorithm to pre-process data or extract new features:\n",
+    "        - E.g., use K-means to cluster users into groups\n",
+    "        - Use clusters as features in the training chain or use the clusters to train seperate models"
    ]
   },
   {
